--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "hapi": "^10.0.1",
     "hapi-react-views": "^3.1.3",
-    "hapi-sequelize": "^0.1.2",
+    "hapi-sequelized": "^2.2.1",
     "mysql": "^2.9.0",
     "react": "^0.13.3",
     "sequelize": "^3.9.0"
